--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+
+* {
+  box-sizing: border-box;
+}
 body {
-  color: blue;
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+s
+  overflow: hidden;
+  margin: 0;
 }
