--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
-* {box-sizing: border-box;
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+</style>
+* {
+  box-sizing: border-box;
 }
 body {
   font-family: 'Roboto', sans-serif;
+  margin: 0px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  margin: 0;
 }
