--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,11 @@
 }
 body {
   font-family: 'Roboto', sans-serif;
-  margin: 0px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0px;
 }
